--- a/hadoop_cluster/presto/config.properties
+++ b/hadoop_cluster/presto/config.properties
@@ -3,6 +3,6 @@ node-scheduler.include-coordinator=true
 http-server.http.port=8080
 discovery-server.enabled=true
 discovery.uri=http://localhost:8080
-query.max-memory=512MB
-query.max-memory-per-node=256MB
-query.max-total-memory-per-node=384MB
+query.max-memory=2GB
+query.max-memory-per-node=1GB
+query.max-total-memory-per-node=1.5GB
